Adicionando correções ortográficas e padronização de termos

--- a/editaveis/avaliacaoframework.tex
+++ b/editaveis/avaliacaoframework.tex
@@ -4,7 +4,7 @@ Neste capítulo são apresentados os resultados de cada \textit{sprint} executad
 
 \section{Inicialização dos Ciclos - Treinamento}
 
-Como demonstrado no planejamento da execução dos ciclos de pesquisa-ação, no capítulo sobre Materiais e Métodos, foi realizado um treinamento em todas as instituições com o propósito de esclarecer conceitos e práticas propostas pelo \textit{framework}. Nesse âmbito, foram evidenciados os aspectos inerentes à verificação de \textit{software} e utilização de ferramentas para as equipes de TI e, por outro lado, procurou-se dialogar com as áreas de negócio para tratar sobre os aspectos formais de como os projetos seriam executados a partir daquele momento, considerando práticas da VBSE.
+Como demonstrado no planejamento da execução dos ciclos de pesquisa-ação, no capítulo sobre Materiais e Métodos, foi realizado um treinamento em todas as instituições com o propósito de esclarecer conceitos e práticas propostas pelo \textit{framework}. Nesse âmbito, foram evidenciados os aspectos inerentes à verificação de \textit{software} e utilização de ferramentas para as equipes de TI e, por outro lado, procurou-se dialogar com as áreas de negócio para tratar sobre os aspectos formais de como os projetos seriam executados a partir daquele momento, considerando princípios da VBSE.
 
 Para familiarizar as equipes de TI com as práticas de implementação de testes unitários e inspeção de código, foram organizadas dinâmicas denominadas \textit{Coding Dojo}. Nesse tipo de dinâmica todas as pessoas atuam na construção de uma solução proposta pelo idealizador, alternando a posição reflexiva da platéia com as posições mais ativas dos pilotos. Assim, a construção sempre continua a partir do que os pilotos anteriores já desenvolveram.
 
