--- a/editaveis/consideracoesfinais.tex
+++ b/editaveis/consideracoesfinais.tex
@@ -1,4 +1,4 @@
-\chapter{Considerações Finais}
+\chapter{Conclusão}
 
 Durante a realização deste trabalho, foi possível concluir a aplicação do plano metológico de pesquisa concebido para este estudo. O \textit{framework} concebido durante a primeira parte do plano foi avaliado de acordo com os ciclos de pesquisa-ação executados nas instituições que se dispuseram a participar do estudo.
 
