--- a/editaveis/introducao.tex
+++ b/editaveis/introducao.tex
@@ -8,7 +8,7 @@ Nas últimas décadas, o controle de qualidade e uso de padrões atraíram muita
 
 A partir da observação da linha cronológica de evolução da qualidade, um grande marco, sem dúvida alguma, foi a revolução industrial. Nesse período, a expansão industrial fomentou uma situação de concorrência entre as diversas empresas que surgiram e assim, o processo de melhoria contínua passou a ser buscado. A indústria de desenvolvimento de \textit{software}, embora tenha sido criada em um período mais recente, também está inserida nesse contexto.
 
-As empresas que atuam no desenvolvimento de \textit{software} possuem os desafios de lidar com a crescente taxa de mudanças tecnológicas e adicionalmente, com o aumento dos níveis de concorrência em escala global. Mediante esta perpectiva, a fim de permanecer, as empresas buscam constantemente novas estratégias para se diferenciarem de seus concorrentes.
+As empresas que atuam no desenvolvimento de \textit{software} possuem os desafios de lidar com a crescente taxa de mudanças tecnológicas e adicionalmente, com o aumento dos níveis de concorrência em escala global. Mediante esta perspectiva, a fim de permanecer, as empresas buscam constantemente novas estratégias para se diferenciarem de seus concorrentes.
 
 Nesse âmbito, deve-se considerar também a crescente complexidade dos produtos de \textit{software}. Segundo Sommerville (2003), é válido notar que \textit{software} está presente em várias atividades do cotidiano das pessoas e isso favorece ainda mais a demanda por este produto, acarretando na construção de produtos até mesmo inusitados dependendo da necessidade. Por outro lado, para Dijkstra (1972), o aumento de complexidade deve-se também à rápida melhoria e aperfeiçoamento que se obteve na criação de máquinas.
 
@@ -48,14 +48,14 @@ Outro quesito que deve ser evidenciado é que devido às limitações de orçame
 Dessa forma, este trabalho apresenta a seguinte questão de pesquisa:
 
 \begin{itemize}
-	\item Como utilizar as inspeções e testes unitários, que são práticas complementares da Verificação de \textit{Software}, em conjunto com os conceitos oriundos da VBSE, na avaliação da qualidade de código no contexto do desenvolvimento ágil?
+	\item Como utilizar as inspeções e testes unitários, que são práticas complementares da Verificação de \textit{Software}, em conjunto com os princípios oriundos da VBSE, na avaliação da qualidade de código no contexto do desenvolvimento ágil?
 \end{itemize}
 
 \section{Objetivo}
 
 \subsection{Objetivo Geral}
 
-O objetivo geral deste trabalho é propor um conjunto de atividades, práticas e ferramentas que favoreçam as atividades de inspeção e elaboração de testes unitários, levando em consideração conceitos da VBSE. Por meio deste conjunto, busca-se alcançar bons níveis de manutenibilidade de código no contexto de desenvolvimento ágil.
+O objetivo geral deste trabalho é propor um conjunto de atividades, práticas e ferramentas que favoreçam as atividades de inspeção e elaboração de testes unitários, levando em consideração princípios da VBSE. Por meio deste conjunto, busca-se alcançar bons níveis de manutenibilidade de código no contexto de desenvolvimento ágil.
 
 Este trabalho, como mencionado, possui foco em metodologias ágeis, mais especificamente no \textit{Scrum} e nas práticas mais básicas e complementares da verificação de \textit{software}, sendo elas a implementação de testes unitários e inspeções de código. O \textit{framework} aqui elaborado, reúne essas práticas, a partir de uma ótica de análise de efetividade das mesmas, com atividades do \textit{Scrum}. Naturalmente, exercendo um controle maior sobre a escrita do código que concretiza o \textit{software}, alinhando esta atividade ao propósito do projeto, será possível obter produtos de maior qualidade.
 
@@ -67,7 +67,7 @@ Por objetivos específicos para este trabalho, tem-se:
 	\item Consolidar o entendimento acerca dos elementos necessários à construção do \textit{framework} de avaliação da qualidade de código.
 	\item Pesquisar abordagens inerentes às inspeções e aos testes unitários para a elaboração do \textit{framework}.
 	\item Definir detalhes acerca da execução das atividades propostas pelo \textit{framework} junto às atividades presentes no \textit{Scrum}.
-	\item Incorporar diretrizes propostas pela Engenharia de \textit{Software} Baseada em Valor ao \textit{framework}.
+	\item Incorporar princípios propostos pela Engenharia de \textit{Software} Baseada em Valor ao \textit{framework}.
 \end{itemize}
 
 \section{Organização do Documento}
