--- a/editaveis/metodologia.tex
+++ b/editaveis/metodologia.tex
@@ -22,7 +22,7 @@ Também foi utilizada como fonte para o estabelecimento do \textit{framework} um
 
 A revisão sistemática, por sua vez, se estabelece como uma metodologia bem definida para identificar, analisar e interpretar as melhores abordagens e práticas relacionadas a uma determinada questão de pesquisa \cite{sistematica}. Além desses aspectos, é uma metodologia que possibilita uma repetição concisa.
 
-A opção pelo uso desta revisão sistemática deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais tem sido asf abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
+A opção pelo uso desta revisão sistemática deve-se ao fato de que este trabalho também está voltado para a tentativa de compreender quais têm sido as abordagens empregadas na elaboração de testes unitários e como se tem avaliado a efetividade destes. O \textit{framework}, naturalmente, compreende a prática de elaboração de testes unitários.
 
 Outro aspecto interessante da revisão sistemática é que esta auxilia de maneira precisa na localização dos principais trabalhos publicados para uma determinada problemática, favorecendo a construção de uma linha cronológica que demonstra ao pesquisador quais linhas têm sido defendidas e quais são os campos mais promissores para uma futura exploração.
 
@@ -99,7 +99,7 @@ Por se tratar de uma instituição aberta ao âmbito de pesquisa na área de Eng
 
 \section{Avaliação da Efetividade do \textit{Framework}}
 
-Para realizar futuramente uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}) \cite{gqm}. A seguir, tem-se a tabela \ref{table:tabela1}, que resume o objetivo da medição.
+Para realizar uma análise da efetividade da aplicação do \textit{framework}, elaborou-se um GQM (\textit{Goal Question Metrics}) \cite{gqm}. A seguir, tem-se a tabela \ref{table:tabela1}, que resume o objetivo da medição.
 
 \begin{table}[h]
 \caption{Tabela Resumo do Objetivo de Medição}
@@ -127,7 +127,7 @@ No contexto de & Projetos de desenvolvimento e manutenção da Fábrica e da Con
 A partir do quadro resumo que descreve o objetivo de medição, foram elaboradas questões a serem respondidas por meio das medições, bem como as métricas associadas às mesmas. A seguir, tem-se a apresentação das questões e métricas.
 
 \begin{itemize}
-	\item \textbf{Questão 1:} Como a quantidade de defeitos do código fonte evolui ao longo \textit{sprints}?
+	\item \textbf{Questão 1:} Como a quantidade de defeitos do código fonte evolui ao longo das \textit{sprints}?
 	\subitem Número de Defeitos encontrados em Inspeções
 
 	\item \textbf{Questão 2:} Qual o nível de eficácia dos testes unitários implementados a partir do uso do guia de implementação do \textit{framework}?
