--- a/editaveis/consideracoesfinais.tex
+++ b/editaveis/consideracoesfinais.tex
@@ -6,6 +6,10 @@ Os dados obtidos por meio da execução dos ciclos ressaltaram a importância de
 
 Outro aspecto que foi evidenciado pela execução dos ciclos é que a realização de inspeções e implementação de testes unitários realmente se caracterizam como atividades complementares. No caso do Laboratório Fábrica de \textit{Software}, embora a suíte de testes unitários não tenha sido concluída ao final dos ciclos, percebeu-se que a inspeção foi capaz de identificar defeitos que poderiam, futuramente, se apresentar como uma falha a partir da utilização do sistema.
 
+É válido notar a partir dos dados apresentados que as heurísticas do \textit{framework} inerentes à elaboração de testes unitários se mostraram eficazes na implementação da suíte de testes. Percebeu-se que as suítes foram capazes de exercitar mais de uma vez o trecho de código sob teste. Este aspecto demonstra que os testes consideraram mais de um cenário de uso dos módulos.
+
+Adicionalmente, percebeu-se que os índices de manutenibilidade aumentaram em relação ao diagnóstico inicial dos projetos. Quando há uma maior preocupação com a qualidade do código implementado, os desenvolvedores projetam alternativas mais modulares de organização do código. Além disso, as inspeções foram capazes de evidenciar trechos de código que precisavam ser refatorados.
+
 A coleta de dados efetuada durante a realização deste trabalho foi desafiadora para a equipe de pesquisa. Primeiramente, é importante notar que uma das instituições, no caso a CGDF, não possuía o mínimo da base de uma cultura de verificação de \textit{software}. Felizmente, ao final dos dois ciclos, contemplou-se a excelente aceitação por parte dos integrantes da instituição. Em conversas com o diretor de tecnologia da instituição, foi dito que o uso do \textit{framework} será permanente em todos os projetos de desenvolvimento. Por outro lado, no Laboratório Fábrica de \textit{Software}, mesmo com a resistência inicial no uso do \textit{framework}, os desenvolvedores mencionaram que o \textit{framework} é promissor e pretendem se organizar melhor para tornar seu uso permanente.
 
 O procedimento técnico de pesquisa-ação também se mostrou como o mais apropriado para o contexto deste estudo. A partir da execução repetida de atividades, foi possível trabalhar uma mudança de percepção nos participantes do estudo. O único aspecto que realmente se manteve durante os ciclos foi a opinião dos desenvolvedores quanto à carga de trabalho trazida pelo uso do \textit{framework}. Contudo, conforme afirmação da equipe do projeto SICOR, havendo disciplina, até mesmo uma equipe pequena é plenamente capaz de aplicar os procedimentos elencados pelo \textit{framework}.
